Some formatting with the message display

--- a/app/src/main/res/layout/message_display.xml
+++ b/app/src/main/res/layout/message_display.xml
@@ -33,18 +33,32 @@
                 android:layout_marginTop="5dp"
                 android:layout_height="50dp"/>
 
+            <ImageView
+                android:layout_width="50dp"
+                android:id="@+id/my_photo"
+                android:layout_alignParentTop="true"
+                android:layout_centerVertical="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="5dp"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
+                android:layout_height="50dp"/>
+
             <TextView
                 android:id="@+id/message"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
-                android:layout_centerInParent="true"
-                android:layout_marginStart="21dp"
-                android:layout_marginLeft="21dp"
-                android:layout_marginTop="18dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="15dp"
                 android:layout_toEndOf="@+id/sender_photo"
                 android:layout_toRightOf="@+id/sender_photo"
-                android:text="TextView" />
+                android:layout_toLeftOf="@+id/my_photo"
+                android:layout_toStartOf="@+id/my_photo"
+                android:text="TextView"
+                android:gravity="center" />
 
         </RelativeLayout>
 
