--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -8,6 +8,10 @@
     android:paddingRight="16dp" >
 
 
+    <include
+        layout="@layout/app_bar_main"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
     <EditText
         android:id="@+id/textbox"
@@ -49,5 +53,12 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginRight="10dp" />
+
+    <include
+        layout="@layout/side_drawer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+
 
 </RelativeLayout>
