--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -22,5 +22,11 @@
     <include layout="@layout/content_main" />
 
 
+    <include
+        layout="@layout/side_drawer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
