Made profile page with option to upload your own profile picture

--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -11,4 +11,9 @@
         android:orderInCategory="99"
         android:title="@string/action_sign_out"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/dark_mode"
+        android:orderInCategory="98"
+        android:title="@string/action_dark_mode"
+        app:showAsAction="never" />
 </menu>
