--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -15,36 +15,10 @@
         android:paddingRight="16dp">
 
 
-        <EditText
-            android:id="@+id/textbox"
-            android:layout_width="230dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="60dp"
-            android:hint="Enter a message"
-            android:inputType="text" />
-
-        <Button
-            android:id="@+id/sendButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginBottom="60dp"
-            android:layout_toEndOf="@+id/textbox"
-            android:layout_toRightOf="@+id/textbox"
-            android:text="Send" />
-
         <ListView
-            android:id="@+id/textdisplay"
+            android:id="@+id/lv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/sendButton"
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
