--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -183,6 +183,7 @@
                     android:textSize="13sp" />
 
                 <TextView
+                    android:id="@+id/my_email"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif-light"
