--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,18 +8,18 @@
     <fragment
         android:id="@+id/navigation_home"
         android:name="com.example.chat_app.ui.home.HomeFragment"
-        android:label="@string/title_home"
+        android:label="Chat Rooms"
         tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/navigation_dashboard"
         android:name="com.example.chat_app.ui.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
+        android:label="Chat Finder"
         tools:layout="@layout/fragment_dashboard" />
 
     <fragment
         android:id="@+id/navigation_notifications"
         android:name="com.example.chat_app.ui.profile.ProfileFragment"
-        android:label="@string/title_notifications"
+        android:label="My Profile"
         tools:layout="@layout/activity_profile" />
 </navigation>
