--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -30,6 +30,18 @@
             android:layout_marginEnd="10dp"
             android:layout_marginRight="10dp" />
 
+        <TextView
+            android:id="@+id/tv_temp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="215dp"
+            android:layout_marginRight="215dp"
+            android:layout_marginBottom="418dp"
+            android:text="TextView" />
+
 
     </RelativeLayout>
 
