--- a/app/src/main/res/layout/create_account.xml
+++ b/app/src/main/res/layout/create_account.xml
@@ -1,86 +1,100 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <EditText
         android:id="@+id/name"
         android:layout_width="409dp"
         android:layout_height="56dp"
-        android:hint="Display Name"
-        app:layout_constraintBottom_toTopOf="@+id/email"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginStart="@dimen/horizontal_space"
+        android:layout_marginEnd="@dimen/horizontal_space"
+        android:layout_alignParentLeft="true"
+        android:layout_marginBottom="@dimen/vertical_space"
+        android:layout_alignBottom="@+id/email"
+        android:hint="Display Name" />
 
     <EditText
         android:id="@+id/email"
         android:layout_width="409dp"
         android:layout_height="45dp"
-        android:hint="Email Address"
-        app:layout_constraintBottom_toTopOf="@+id/password"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/name" />
+        android:layout_marginStart="@dimen/horizontal_space"
+        android:layout_marginEnd="@dimen/horizontal_space"
+        android:layout_alignParentLeft="true"
+        android:layout_marginBottom="@dimen/vertical_space"
+        android:layout_alignBottom="@+id/password"
+        android:hint="Email Address" />
 
     <Button
         android:id="@+id/create"
         android:layout_width="409dp"
         android:layout_height="wrap_content"
-        android:text="Create Account"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password" />
+        android:layout_marginStart="@dimen/horizontal_space"
+        android:layout_marginLeft="100dp"
+        android:layout_marginEnd="@dimen/horizontal_space"
+        android:layout_marginRight="10dp"
+        android:layout_alignParentLeft="true"
+        android:layout_marginBottom="@dimen/vertical_space"
+        android:layout_alignBottom="@+id/button4"
+        android:text="Create Account" />
 
     <EditText
         android:id="@+id/password"
         android:layout_width="405dp"
         android:layout_height="46dp"
-        android:hint="Password"
-        app:layout_constraintBottom_toTopOf="@+id/create"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/email"
-        app:layout_constraintVertical_chainStyle="spread" />
+        android:layout_marginStart="@dimen/horizontal_space"
+        android:layout_marginLeft="100dp"
+        android:layout_marginEnd="@dimen/horizontal_space"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="@dimen/vertical_space"
+        android:layout_alignBottom="@+id/create"
+        android:layout_alignParentLeft="true"
+        android:hint="Password" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Already Have an Account?"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button4"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/create" />
+        android:layout_marginStart="@dimen/horizontal_space"
+        android:layout_marginLeft="100dp"
+        android:layout_marginBottom="13dp"
+        android:layout_alignBottom="@id/button4"
+        android:layout_alignParentLeft="true"
+        android:text="Already Have an Account?" />
 
     <Button
         android:id="@+id/button4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/vertical_space"
+        android:layout_marginEnd="@dimen/horizontal_space"
+        android:layout_marginRight="@dimen/horizontal_space"
+        android:layout_alignParentRight="true"
+        android:layout_alignBottom="@id/googleSignIn"
         android:text="Sign In"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/textView4"
-        app:layout_constraintTop_toBottomOf="@+id/create" />
+        android:layout_marginLeft="15dp" />
 
     <Button
         android:id="@+id/googleSignIn"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Sign In With Google"
-        android:background="@color/teal_700"
-        app:layout_constraintBottom_toTopOf="@+id/name"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_marginStart="@dimen/horizontal_space"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="50dp"
+        android:layout_marginEnd="@dimen/horizontal_space"
+        android:background="@color/gradEnd"
+        android:text="Sign In With Google" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="175dp"
+        app:srcCompat="@drawable/obama2" />
+
+
+</RelativeLayout>
+
