Multi rooms established working on fixing bugs in sending messages

--- a/app/src/main/res/layout/chats.xml
+++ b/app/src/main/res/layout/chats.xml
@@ -47,7 +47,7 @@
                 android:layout_toLeftOf="@+id/my_photo"
                 android:layout_toEndOf="@+id/sender_photo"
                 android:layout_toRightOf="@+id/sender_photo"
-                android:gravity="center"
+                android:gravity="left"
                 android:text="TextView"
                 android:textSize="24sp" />
 
