--- a/app/src/main/res/layout/activity_chat_display.xml
+++ b/app/src/main/res/layout/activity_chat_display.xml
@@ -8,12 +8,14 @@
 
     <EditText
         android:id="@+id/textbox"
-        android:layout_width="230dp"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginBottom="8dp"
         android:hint="Enter a message"
         android:inputType="text" />
 
@@ -24,9 +26,11 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginStart="-3dp"
+        android:layout_marginLeft="-3dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginRight="12dp"
+        android:layout_marginBottom="9dp"
         android:layout_toEndOf="@+id/textbox"
         android:layout_toRightOf="@+id/textbox"
         android:text="Send" />
@@ -44,6 +48,8 @@
         android:layout_marginStart="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
+        android:background="@android:color/transparent"
+        android:cacheColorHint="@android:color/transparent"
         android:layout_marginEnd="10dp"
         android:layout_marginRight="10dp" />
 
